fix: remove sonar code smells